--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     }
 
     /* Layout */
-    .wrap{min-height:100dvh;display:grid;grid-template-rows:1fr auto}
+    .wrap{min-height:100svh;min-height:100dvh;min-height:100vh;display:grid;grid-template-rows:1fr}
 
     /* Bottom nav */
-    .bottombar{position:sticky;bottom:0;z-index:20;display:flex;align-items:center;gap:10px;
+    .bottombar{position:fixed;left:0;right:0;bottom:0;z-index:20;display:flex;align-items:center;gap:10px;
       padding:8px var(--pad) calc(env(safe-area-inset-bottom) + 10px) var(--pad);
       background:linear-gradient(180deg, rgba(0,0,0,.25), rgba(0,0,0,.6));
       -webkit-backdrop-filter: blur(10px) saturate(140%);backdrop-filter: blur(10px) saturate(140%);
@@ -80,8 +80,8 @@
     .btab.active{background:linear-gradient(135deg, rgba(0,229,255,.35), rgba(255,43,214,.35));border-color:transparent;color:#0b0c10;font-weight:800;box-shadow:0 0 28px rgba(0,229,255,.35), 0 0 14px rgba(255,43,214,.28)}
 
     /* Screens */
-    main{position:relative;min-height:0}
-    .screen{position:absolute;inset:0;overflow:auto;padding:14px}
+    main{position:relative;min-height:0;padding-bottom:var(--nav-h,84px)}
+    .screen{position:relative;overflow:auto;padding:14px}
     .screen.hidden{display:none}
 
     /* Glass panel feel, full-bleed */
@@ -454,6 +454,15 @@ if('serviceWorker' in navigator){
     navigator.serviceWorker.register('./service-worker.js').catch(console.error);
   });
 }
+// Measure bottom bar height so content never hides under it (iOS PWA fix)
+function setNavH(){
+  const nav = document.querySelector('.bottombar');
+  const h = nav ? nav.offsetHeight : 84;
+  document.documentElement.style.setProperty('--nav-h', h+'px');
+}
+window.addEventListener('resize', setNavH);
+window.addEventListener('orientationchange', setNavH);
+setNavH();
 </script>
 </body>
 </html>
